--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
     <script type="text/javascript">
-        window.location.href = "./RitvikSharma_Resume.pdf"
+        window.location.href = "./cv.pdf"
     </script>
     </body>
 </html>
